# variable_manager_project

./: MANIFEST.in   pyproject.toml  setup.py
docs/: DESIGN.md  README.md  USAGE.md
tests/: __init__.py  test_variable.py
tests/test_data/: variables.csv  variables.json
variable_manager/: __init__.py  core.py  handlers.py  importes.py
