[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "variable-manager"
version = "1.0.0"
description = "A Variable Manager to handle variables from multiple sources with extensibility."
readme = "docs/README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = ["python-dotenv"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8"
]

[tool.flake8]
max-line-length = 88
exclude = ["venv", "__pycache__"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=variable_manager --cov-report=term-missing"
testpaths = ["tests"]
